tests/baselines/reference/exportAssignmentTopLevelClodule.errors.txt
foo_0.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== foo_1.ts (0 errors) ====
    import foo = require("./foo_0");
    if(foo.answer === 42){
    	var x = new foo();
    }
    
==== foo_0.ts (1 errors) ====
    class Foo {
    	test = "test";
    }
    module Foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var answer = 42;
    }
    export = Foo;
    